--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,57 @@
+:root {
+  --main-color: #7195ae;
+  --accent-color: #5d5c61;
+  --text-color: #fff;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 80px;
+}
+
 body {
+  font-family: 'Verdana', sans-serif;
+  font-size: 16px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--main-color);
+  color: var(--accent-color);
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+h2,
+p {
+  margin: 0;
+}
+
+input {
+  display: inline-block;
+  width: 300px;
+  padding: 10px 12px;
+  font-size: 14px;
+  margin-bottom: 15px;
+  border: 1px solid var(--accent-color);
+  border-radius: 5px;
+}
+
+input::placeholder {
+  color: lightgray;
+}
+
+input:hover,
+input:focus {
+  outline: none;
+  background-color: hsla(206, 27%, 56%, 0.1);
+  border: 1px solid var(--main-color);
+}
+
+input:hover::placeholder,
+input:hover::placeholder {
+  color: lightgray;
 }
